test/libsolidity/syntaxTests/nameAndTypeResolution/545_warn_about_address_members_on_contract_callcode.sol
contract C {
    function f() view public {
        this.callcode;
    }
}
// ----
// TypeError: (52-65): Member "callcode" not found or not visible after argument-dependent lookup in contract C
